--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     background-color: whitesmoke;
     font-family: "Lato", sans-serif;
     padding-left: 1rem;
+    
 }
 
 header{
@@ -29,9 +30,17 @@ header img{
     cursor: pointer;
 }
 
+.ham-icon{
+    display: none;
+}
+
 .navbar{
     line-height: 2rem;
     height: 35px; 
+}
+
+.navbar ul{
+    display: inline-flex;
 }
 
 nav{
@@ -42,6 +51,7 @@ nav{
     /*justify-content: space-between;   */
     gap: 2rem;
 }
+
 
 .li1{
     list-style-type: none;
@@ -64,7 +74,6 @@ nav{
     height: fit-content;
     width: fit-content;
     
-    
 }
 
 
@@ -75,6 +84,11 @@ nav{
     cursor: pointer;
 } 
 
+.search-bar{
+    float: right; 
+    display: inline-flex; 
+    margin-left: 32rem;
+}
 
 /*.search-bar{
     margin-left: 50rem;
@@ -113,19 +127,23 @@ nav{
     background-color: rgb(223, 99, 5);
 }
 
+
+
+
 /****************************************** MAIN SECTION **************************************************/
 
 section{
     display: flex;
     flex-direction: column;
     height: 100%;
-    width: 60%;
+    width: 60%; 
     margin: 3rem auto;
     margin-top: 0;
     padding: 3rem 2.8rem;
     /* align-items: center; */   
     background-color: #fff;
     line-height: 1.8rem;
+    column-gap: 300px; 
     
 }
 
@@ -237,13 +255,14 @@ table{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: fit-content;
+    width: 75%;
+    height: 20rem;
 }
 
 .sidebar{
     position: fixed;  
     left: 2rem;
-    top: 3rem;
+    top: 3rem; 
      margin-top: 4rem;
     display: flex;
     flex-direction: column;
@@ -262,7 +281,8 @@ table{
     /*top: 70px; ****/
     /* padding: 10px; */
     z-index: 10;
-    scroll-padding: 50px;
+
+    scroll-padding: 150px;
 }
 
 .side-h3{
@@ -292,11 +312,46 @@ table{
     border: 1px solid gray;
 }
 
-/*********************************    FOOTER     ****************************/
+
+.sidebar-2{
+        position: fixed;  
+        right: 2rem; 
+        top: 0rem;
+        margin-top: 4rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        /*height: fit-content; */
+        width: 16%; 
+        padding: 1rem;
+        border-radius: 10px;
+        background-color: rgb(255, 255, 255);
+        font-size: 15px;
+       
+        border-bottom-width: 70px;
+        /*left: 750px; */
+        width: fit-content; 
+        
+        z-index: -5;
+        scroll-padding: 150px;
+        top: 3.5rem;
+        line-height: 2rem;
+        /*overflow: hidden; */
+}
+
+.sidebar-2 span{
+    font-weight: 500;
+}
+
+.sidebar-2 h4{
+    font-size: larger;
+}
+
+/****** FOOTER *****/
 
 /*.footer{
     display: fixed;
-    z-index: 1000;
+    z-index: 1001;
 } */
 
 /*.ftr{
@@ -314,7 +369,7 @@ table{
 
   /********************************************* MEDIA QURIES ********************************************/
 
-@media (max-width: 38em) {
+@media (max-width: 720px) {            /*@media (max-width: 38em)*/
     html{
         font-size: 90%;
     }  
@@ -350,7 +405,8 @@ table{
 
     .ham-icon{
         height: 25px;
-        padding-left: 10rem;
+        display: block;
+        padding-left: 11rem; 
     }
 
     .mongodb-features-img{
@@ -379,8 +435,8 @@ table{
 
     .youtube{
         width: 100%;
-        height: 100%;
-    }
+        height: 15rem;
+    } 
 
     .navbar-btn-end{
         font-size: 10px;
@@ -391,4 +447,52 @@ table{
     .nav-list{
         display: none;
     }
+
+    .search-bar{
+        display: none;
+    }
+
+    .sidebar-2{
+        display: none;
+    }
+
+    .navbar{
+        flex-direction: column;
+    }
+
+    #menulist{
+        display: none; 
+    }
+
+    .menus{
+        display: flex;
+        flex-direction: row;
+    }
+
+  /* #menulist ul{
+       display: flex;
+       flex-direction: column;
+       float: right;
+       background-color: rgb(255, 255, 255);  
+       margin-bottom: 50px;
+   } */
+  
 }
+
+
+/************************************/
+
+ @media (max-width: 720px){
+    .sidebar{
+        display: none;
+    }
+
+    .sidebar-2{
+        display: none;
+    }
+
+    .section{
+        display: flex;
+        width: 100%;
+    }
+} 
